# HW_19.2

./: README.md  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options_and_more.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: update_db.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_blogpost_remove_product_manufactured_at.py  0004_delete_blogpost.py  0005_version.py  0006_alter_product_options_product_is_published_and_more.py  0007_alter_product_options_alter_version_options_and_more.py  0008_product_owner_product_photo_product_views_counter_and_more.py  0009_alter_product_options.py  0010_product_status.py  0011_remove_product_owner_product_user.py
catalog/templates/: products_list.html
catalog/templates/catalog/: base.html  contacts.html  product_detail.html  product_list.html  products_detail.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
fixtures/: category_data.json  data.json  groups_permissions.json  product_data.json
users/: models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
