[tool.poetry]
name = "hw-19-2"
version = "0.1.0"
description = ""
authors = ["Ivan Nikolaev <nikolaevcool07@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_19"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
